# Thesis-SurduBobAlexandru

./: README.md
Code/diffdrive_arduino/launch/: test_robot.launch.py
Code/diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp
Code/path_finder_robot/: CMakeLists.txt
Code/path_finder_robot/config/: mapper_params_online_async.yaml
Code/path_finder_robot/launch/: path_finder.launch.py  rsp.launch.py
Code/path_finder_robot/scripts/: arduino_http_comms.py  decision_making_node.py
Code/path_finder_robot/urdf/: lidar.xacro  path_finder.urdf.xacro  ros2_control.xacro
Code/path_finder_web/: package-lock.json  package.json  package.xml
Code/realsense-ros/: README.md
Code/ydlidar_ros2/launch/: ydlidar_launch.py
Code/ydlidar_ros2/params/: ydlidar.yaml
diffdrive_arduino/: CMakeLists.txt
diffdrive_arduino/controllers/: robot_controller_example.yaml
diffdrive_arduino/include/diffdrive_arduino/: arduino_comms.h  (+1 more)
diffdrive_arduino/src/: arduino_comms.cpp  diffdrive_arduino.cpp
path_finder_robot/: CMakeLists.txt  package.xml
path_finder_robot/config/: my_controllers.yaml  twist_mux.yaml
path_finder_robot/launch/: launch_robot.launch.py  motor.launch.py  path_finder_movement.launch.py  path_finder_slam.launch.py  presentation_launch.py
path_finder_robot/scripts/: arduino_http_comms.py  decision_making_node.py  motor_controller_node.py
path_finder_robot/srv/: ChangeState.srv
path_finder_robot/urdf/: robot_core.xacro
path_finder_web/: CMakeLists.txt
path_finder_web/launch/: web.launch.py
path_finder_web/src/: index.js
(+1 files in other folders)
